--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,18 +19,28 @@ p, h3 {
 	font-size: 18px;
 }
 
-img {
+.photos {
+	display: flex;
+	justify-content: center;
+}
+
+#homer {
 	margin-top: 30px;
-	margin-left: 150px;
 	width: 200px;
     height: 200px;
-    display: block;
+    display: inline;
     position: relative;
 }
 
+#donut {
+	margin-top: 30px;
+	margin-left: 75px;
+	width: 75px;
+	height: 75px;
+}
 
 .hide {
-	visibility: hidden;
+	display: none;
 }
 
 .start {
@@ -43,7 +53,6 @@ img {
 	width: 960px;
 	margin: 25px auto;
 	padding: 10px;
-	border: 1px dashed #c8dad3;
 }
 
 .guess {
@@ -57,6 +66,8 @@ img {
 	justify-content: space-around;
 	align-items: center;
 	margin-top: 85px;
+	border: 1px dashed #c8dad3;
+	padding: 25px 10px;
 }
 
 #wordPlace {
@@ -65,7 +76,21 @@ img {
 }
 
 #lettersGuessed {
-	letter-spacing: 5px;
+	letter-spacing: 11px;
 
 }
+
+.winFlex {
+	display: flex;
+	justify-content: center;
+}
+
+#win {
+	margin-top: 30px;
+	width: 200px;
+    height: 200px;
+    display: inline;
+    position: relative;
+}
+
 
